fix(core): gaps between input chips are collapsing

--- a/projects/core/components/textfield/textfield-multi/textfield-multi.style.less
+++ b/projects/core/components/textfield/textfield-multi/textfield-multi.style.less
@@ -271,6 +271,7 @@ tui-textfield[multi][multi] {
 
     tui-textfield-item {
         transform: translateX(var(--t-scroll));
+        display: inline-table;
     }
 
     input::placeholder {
